--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-pdf/renderer": "^4.3.1",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.80.0",
+    "dotenv": "^17.2.3",
     "mapbox-gl": "^3.16.0",
     "next": "16.0.1",
     "next-pwa": "^5.6.0",
